# among-us-ste-edition

./: .gitignore  CMakeLists.txt  Client.cpp  LevelCreator.cpp  Makefile  MapDesign.cpp  MapDesigner.cpp  README.md  Server.cpp  SimpleClient.cpp  olcExampleProgram.cpp  olcPixelGameEngine.h
SampleLevel1/: RPGVideo.sln  RPGVideo.vcxproj  main.cpp
SampleLevel1/Debug/: RPGVideo.ilk  RPGVideo.vcxproj.FileListAbsolute.txt  vc142.idb
SampleLevel1/Debug/RPGVideo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RPGVideo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/: lobby.json  main.json  map.json
helper/: ConnectionStatus.h  Constants.h  GameInstance.cpp  GameInstance.h  MessageTypes.h  helper.h  olcCollision.h  olcExtended.h  olcPixelGameEngine.h
maps/: map1.json  map2.json  map3.json
networking/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  olc_net.h
